// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appends when .env present 1`] = `
"
✔ Your Prisma schema was created at prisma/schema.prisma
✔ Your Prisma config was created at prisma.config.ts
  You can now open them in your favorite editor.

Environment variables declared in the \`.env\` file are NOT automatically loaded by Prisma.
See: https://pris.ly/prisma-config-env-vars.

Next steps:
1. Install \`dotenv\`, and add \`import "dotenv/config";\` to your \`prisma.config.ts\` file to load environment variables from \`.env\`.
2. Run prisma dev to start a local Prisma Postgres server.
3. Define models in the schema.prisma file.
4. Run prisma migrate dev to migrate your local Prisma Postgres database.
5. Tip: Explore how you can extend the ORM with scalable connection pooling, global caching, and a managed serverless Postgres database. Read: https://pris.ly/cli/beyond-orm

More information in our documentation:
https://pris.ly/d/getting-started
    "
`;

exports[`appends when .env present 2`] = `
"// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
}
"
`;

exports[`appends when .env present 3`] = `
"import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});
"
`;

exports[`do not replace .gitignore file if already present 1`] = `
"# This should not be overridden
/generated/prisma
"
`;

exports[`do not replace .gitignore file if already present 2`] = `
"import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});
"
`;

exports[`is schema and env written on disk replace 1`] = `
"
✔ Your Prisma schema was created at prisma/schema.prisma
✔ Your Prisma config was created at prisma.config.ts
  You can now open them in your favorite editor.

Environment variables declared in the \`.env\` file are NOT automatically loaded by Prisma.
See: https://pris.ly/prisma-config-env-vars.

Next steps:
1. Install \`dotenv\`, and add \`import "dotenv/config";\` to your \`prisma.config.ts\` file to load environment variables from \`.env\`.
2. Run prisma dev to start a local Prisma Postgres server.
3. Define models in the schema.prisma file.
4. Run prisma migrate dev to migrate your local Prisma Postgres database.
5. Tip: Explore how you can extend the ORM with scalable connection pooling, global caching, and a managed serverless Postgres database. Read: https://pris.ly/cli/beyond-orm

More information in our documentation:
https://pris.ly/d/getting-started
    "
`;

exports[`is schema and env written on disk replace 2`] = `
"// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
}
"
`;

exports[`uses determineClientOutputPath when no output is specified 1`] = `
"import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});
"
`;

exports[`warns when DATABASE_URL present in .env  1`] = `
"
✔ Your Prisma schema was created at prisma/schema.prisma
✔ Your Prisma config was created at prisma.config.ts
  You can now open them in your favorite editor.

warn Prisma would have added DATABASE_URL but it already exists in .env
Environment variables declared in the \`.env\` file are NOT automatically loaded by Prisma.
See: https://pris.ly/prisma-config-env-vars.

Next steps:
1. Install \`dotenv\`, and add \`import "dotenv/config";\` to your \`prisma.config.ts\` file to load environment variables from \`.env\`.
2. Run prisma dev to start a local Prisma Postgres server.
3. Define models in the schema.prisma file.
4. Run prisma migrate dev to migrate your local Prisma Postgres database.
5. Tip: Explore how you can extend the ORM with scalable connection pooling, global caching, and a managed serverless Postgres database. Read: https://pris.ly/cli/beyond-orm

More information in our documentation:
https://pris.ly/d/getting-started
    "
`;

exports[`warns when DATABASE_URL present in .env  2`] = `
"// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
}
"
`;

exports[`warns when DATABASE_URL present in .env  3`] = `
"import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});
"
`;

exports[`works with --with-model param cockroachdb 1`] = `
"
✔ Your Prisma schema was created at prisma/schema.prisma
✔ Your Prisma config was created at prisma.config.ts
  You can now open them in your favorite editor.

Environment variables declared in the \`.env\` file are NOT automatically loaded by Prisma.
See: https://pris.ly/prisma-config-env-vars.

Next steps:
1. Install \`dotenv\`, and add \`import "dotenv/config";\` to your \`prisma.config.ts\` file to load environment variables from \`.env\`.
2. Set the DATABASE_URL in the .env file to point to your existing database. If your database has no tables yet, read https://pris.ly/d/getting-started
3. Run prisma db pull to turn your database schema into a Prisma schema.
4. Run prisma generate to generate the Prisma Client. You can then start querying your database.
5. Tip: Explore how you can extend the ORM with scalable connection pooling, global caching, and a managed serverless Postgres database. Read: https://pris.ly/cli/beyond-orm

More information in our documentation:
https://pris.ly/d/getting-started
    "
`;

exports[`works with --with-model param cockroachdb 2`] = `
"// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "cockroachdb"
}

model User {
  id    BigInt  @id @default(sequence())
  email String  @unique
  name  String?
}
"
`;

exports[`works with --with-model param cockroachdb 3`] = `
"import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});
"
`;

exports[`works with --with-model param mongodb 1`] = `
"
✔ Your Prisma schema was created at prisma/schema.prisma
✔ Your Prisma config was created at prisma.config.ts
  You can now open them in your favorite editor.

Environment variables declared in the \`.env\` file are NOT automatically loaded by Prisma.
See: https://pris.ly/prisma-config-env-vars.

Next steps:
1. Install \`dotenv\`, and add \`import "dotenv/config";\` to your \`prisma.config.ts\` file to load environment variables from \`.env\`.
2. Set the DATABASE_URL in the .env file to point to your existing database. If your database has no collections yet, read https://pris.ly/d/getting-started
3. Define models in the schema.prisma file.
4. Run prisma generate to generate the Prisma Client. You can then start querying your database.
5. Tip: Explore how you can extend the ORM with scalable connection pooling, global caching, and a managed serverless Postgres database. Read: https://pris.ly/cli/beyond-orm

More information in our documentation:
https://pris.ly/d/getting-started
    "
`;

exports[`works with --with-model param mongodb 2`] = `
"// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "mongodb"
}

model User {
  id    String  @id @default(auto()) @map("_id") @db.ObjectId
  email String  @unique
  name  String?
}
"
`;

exports[`works with --with-model param mongodb 3`] = `
"import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});
"
`;

exports[`works with --with-model param postgresql 1`] = `
"
✔ Your Prisma schema was created at prisma/schema.prisma
✔ Your Prisma config was created at prisma.config.ts
  You can now open them in your favorite editor.

Environment variables declared in the \`.env\` file are NOT automatically loaded by Prisma.
See: https://pris.ly/prisma-config-env-vars.

Next steps:
1. Install \`dotenv\`, and add \`import "dotenv/config";\` to your \`prisma.config.ts\` file to load environment variables from \`.env\`.
2. Run prisma dev to start a local Prisma Postgres server.
3. Define models in the schema.prisma file.
4. Run prisma migrate dev to migrate your local Prisma Postgres database.
5. Tip: Explore how you can extend the ORM with scalable connection pooling, global caching, and a managed serverless Postgres database. Read: https://pris.ly/cli/beyond-orm

More information in our documentation:
https://pris.ly/d/getting-started
    "
`;

exports[`works with --with-model param postgresql 2`] = `
"// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
}

model User {
  id    Int     @id @default(autoincrement())
  email String  @unique
  name  String?
}
"
`;

exports[`works with --with-model param postgresql 3`] = `
"import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});
"
`;

exports[`works with custom output 1`] = `
"
✔ Your Prisma schema was created at prisma/schema.prisma
✔ Your Prisma config was created at prisma.config.ts
  You can now open them in your favorite editor.

Environment variables declared in the \`.env\` file are NOT automatically loaded by Prisma.
See: https://pris.ly/prisma-config-env-vars.

Next steps:
1. Install \`dotenv\`, and add \`import "dotenv/config";\` to your \`prisma.config.ts\` file to load environment variables from \`.env\`.
2. Run prisma dev to start a local Prisma Postgres server.
3. Define models in the schema.prisma file.
4. Run prisma migrate dev to migrate your local Prisma Postgres database.
5. Tip: Explore how you can extend the ORM with scalable connection pooling, global caching, and a managed serverless Postgres database. Read: https://pris.ly/cli/beyond-orm

More information in our documentation:
https://pris.ly/d/getting-started
    "
`;

exports[`works with custom output 2`] = `
"// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  output   = "./db"
}

datasource db {
  provider = "postgresql"
}
"
`;

exports[`works with custom output 3`] = `
"import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});
"
`;

exports[`works with generator param - \`go run github.com/steebchen/prisma-client-go\` 1`] = `
"
✔ Your Prisma schema was created at prisma/schema.prisma
✔ Your Prisma config was created at prisma.config.ts
  You can now open them in your favorite editor.

Environment variables declared in the \`.env\` file are NOT automatically loaded by Prisma.
See: https://pris.ly/prisma-config-env-vars.

Next steps:
1. Install \`dotenv\`, and add \`import "dotenv/config";\` to your \`prisma.config.ts\` file to load environment variables from \`.env\`.
2. Run prisma dev to start a local Prisma Postgres server.
3. Define models in the schema.prisma file.
4. Run prisma migrate dev to migrate your local Prisma Postgres database.
5. Tip: Explore how you can extend the ORM with scalable connection pooling, global caching, and a managed serverless Postgres database. Read: https://pris.ly/cli/beyond-orm

More information in our documentation:
https://pris.ly/d/getting-started
    "
`;

exports[`works with generator param - \`go run github.com/steebchen/prisma-client-go\` 2`] = `
"// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "go run github.com/steebchen/prisma-client-go"
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
}
"
`;

exports[`works with generator param - \`go run github.com/steebchen/prisma-client-go\` 3`] = `
"import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});
"
`;

exports[`works with preview features - mock test 1`] = `
"
✔ Your Prisma schema was created at prisma/schema.prisma
✔ Your Prisma config was created at prisma.config.ts
  You can now open them in your favorite editor.

Environment variables declared in the \`.env\` file are NOT automatically loaded by Prisma.
See: https://pris.ly/prisma-config-env-vars.

Next steps:
1. Install \`dotenv\`, and add \`import "dotenv/config";\` to your \`prisma.config.ts\` file to load environment variables from \`.env\`.
2. Run prisma dev to start a local Prisma Postgres server.
3. Define models in the schema.prisma file.
4. Run prisma migrate dev to migrate your local Prisma Postgres database.
5. Tip: Explore how you can extend the ORM with scalable connection pooling, global caching, and a managed serverless Postgres database. Read: https://pris.ly/cli/beyond-orm

More information in our documentation:
https://pris.ly/d/getting-started
    "
`;

exports[`works with preview features - mock test 2`] = `
"// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  previewFeatures = ["mock-123"]
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
}
"
`;

exports[`works with preview features - mock test 3`] = `
"import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});
"
`;

exports[`works with preview features - multiple 1`] = `
"
✔ Your Prisma schema was created at prisma/schema.prisma
✔ Your Prisma config was created at prisma.config.ts
  You can now open them in your favorite editor.

Environment variables declared in the \`.env\` file are NOT automatically loaded by Prisma.
See: https://pris.ly/prisma-config-env-vars.

Next steps:
1. Install \`dotenv\`, and add \`import "dotenv/config";\` to your \`prisma.config.ts\` file to load environment variables from \`.env\`.
2. Run prisma dev to start a local Prisma Postgres server.
3. Define models in the schema.prisma file.
4. Run prisma migrate dev to migrate your local Prisma Postgres database.
5. Tip: Explore how you can extend the ORM with scalable connection pooling, global caching, and a managed serverless Postgres database. Read: https://pris.ly/cli/beyond-orm

More information in our documentation:
https://pris.ly/d/getting-started
    "
`;

exports[`works with preview features - multiple 2`] = `
"// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  previewFeatures = ["mock-123", "mock-456"]
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
}
"
`;

exports[`works with preview features - multiple 3`] = `
"import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});
"
`;

exports[`works with provider and url params - cockroachdb 1`] = `
"
✔ Your Prisma schema was created at prisma/schema.prisma
✔ Your Prisma config was created at prisma.config.ts
  You can now open them in your favorite editor.

Environment variables declared in the \`.env\` file are NOT automatically loaded by Prisma.
See: https://pris.ly/prisma-config-env-vars.

Next steps:
1. Install \`dotenv\`, and add \`import "dotenv/config";\` to your \`prisma.config.ts\` file to load environment variables from \`.env\`.
2. Run prisma db pull to turn your database schema into a Prisma schema.
3. Run prisma generate to generate the Prisma Client. You can then start querying your database.
4. Tip: Explore how you can extend the ORM with scalable connection pooling, global caching, and a managed serverless Postgres database. Read: https://pris.ly/cli/beyond-orm

More information in our documentation:
https://pris.ly/d/getting-started
    "
`;

exports[`works with provider and url params - cockroachdb 2`] = `
"// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "cockroachdb"
}
"
`;

exports[`works with provider and url params - cockroachdb 4`] = `
"import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});
"
`;

exports[`works with provider param - MongoDB 1`] = `
"
✔ Your Prisma schema was created at prisma/schema.prisma
✔ Your Prisma config was created at prisma.config.ts
  You can now open them in your favorite editor.

Environment variables declared in the \`.env\` file are NOT automatically loaded by Prisma.
See: https://pris.ly/prisma-config-env-vars.

Next steps:
1. Install \`dotenv\`, and add \`import "dotenv/config";\` to your \`prisma.config.ts\` file to load environment variables from \`.env\`.
2. Set the DATABASE_URL in the .env file to point to your existing database. If your database has no collections yet, read https://pris.ly/d/getting-started
3. Define models in the schema.prisma file.
4. Run prisma generate to generate the Prisma Client. You can then start querying your database.
5. Tip: Explore how you can extend the ORM with scalable connection pooling, global caching, and a managed serverless Postgres database. Read: https://pris.ly/cli/beyond-orm

More information in our documentation:
https://pris.ly/d/getting-started
    "
`;

exports[`works with provider param - MongoDB 2`] = `
"// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "mongodb"
}
"
`;

exports[`works with provider param - MongoDB 4`] = `
"import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});
"
`;

exports[`works with provider param - SQLITE 1`] = `
"
✔ Your Prisma schema was created at prisma/schema.prisma
✔ Your Prisma config was created at prisma.config.ts
  You can now open them in your favorite editor.

Environment variables declared in the \`.env\` file are NOT automatically loaded by Prisma.
See: https://pris.ly/prisma-config-env-vars.

Next steps:
1. Install \`dotenv\`, and add \`import "dotenv/config";\` to your \`prisma.config.ts\` file to load environment variables from \`.env\`.
2. Set the DATABASE_URL in the .env file to point to your existing database. If your database has no tables yet, read https://pris.ly/d/getting-started
3. Run prisma db pull to turn your database schema into a Prisma schema.
4. Run prisma generate to generate the Prisma Client. You can then start querying your database.
5. Tip: Explore how you can extend the ORM with scalable connection pooling, global caching, and a managed serverless Postgres database. Read: https://pris.ly/cli/beyond-orm

More information in our documentation:
https://pris.ly/d/getting-started
    "
`;

exports[`works with provider param - SQLITE 2`] = `
"// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "sqlite"
}
"
`;

exports[`works with provider param - SQLITE 4`] = `
"import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});
"
`;

exports[`works with provider param - SqlServer 1`] = `
"
✔ Your Prisma schema was created at prisma/schema.prisma
✔ Your Prisma config was created at prisma.config.ts
  You can now open them in your favorite editor.

Environment variables declared in the \`.env\` file are NOT automatically loaded by Prisma.
See: https://pris.ly/prisma-config-env-vars.

Next steps:
1. Install \`dotenv\`, and add \`import "dotenv/config";\` to your \`prisma.config.ts\` file to load environment variables from \`.env\`.
2. Set the DATABASE_URL in the .env file to point to your existing database. If your database has no tables yet, read https://pris.ly/d/getting-started
3. Run prisma db pull to turn your database schema into a Prisma schema.
4. Run prisma generate to generate the Prisma Client. You can then start querying your database.
5. Tip: Explore how you can extend the ORM with scalable connection pooling, global caching, and a managed serverless Postgres database. Read: https://pris.ly/cli/beyond-orm

More information in our documentation:
https://pris.ly/d/getting-started
    "
`;

exports[`works with provider param - SqlServer 2`] = `
"// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "sqlserver"
}
"
`;

exports[`works with provider param - SqlServer 4`] = `
"import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});
"
`;

exports[`works with provider param - cockroachdb 1`] = `
"
✔ Your Prisma schema was created at prisma/schema.prisma
✔ Your Prisma config was created at prisma.config.ts
  You can now open them in your favorite editor.

Environment variables declared in the \`.env\` file are NOT automatically loaded by Prisma.
See: https://pris.ly/prisma-config-env-vars.

Next steps:
1. Install \`dotenv\`, and add \`import "dotenv/config";\` to your \`prisma.config.ts\` file to load environment variables from \`.env\`.
2. Set the DATABASE_URL in the .env file to point to your existing database. If your database has no tables yet, read https://pris.ly/d/getting-started
3. Run prisma db pull to turn your database schema into a Prisma schema.
4. Run prisma generate to generate the Prisma Client. You can then start querying your database.
5. Tip: Explore how you can extend the ORM with scalable connection pooling, global caching, and a managed serverless Postgres database. Read: https://pris.ly/cli/beyond-orm

More information in our documentation:
https://pris.ly/d/getting-started
    "
`;

exports[`works with provider param - cockroachdb 2`] = `
"// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "cockroachdb"
}
"
`;

exports[`works with provider param - cockroachdb 4`] = `
"import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});
"
`;

exports[`works with provider param - mysql 1`] = `
"
✔ Your Prisma schema was created at prisma/schema.prisma
✔ Your Prisma config was created at prisma.config.ts
  You can now open them in your favorite editor.

Environment variables declared in the \`.env\` file are NOT automatically loaded by Prisma.
See: https://pris.ly/prisma-config-env-vars.

Next steps:
1. Install \`dotenv\`, and add \`import "dotenv/config";\` to your \`prisma.config.ts\` file to load environment variables from \`.env\`.
2. Set the DATABASE_URL in the .env file to point to your existing database. If your database has no tables yet, read https://pris.ly/d/getting-started
3. Run prisma db pull to turn your database schema into a Prisma schema.
4. Run prisma generate to generate the Prisma Client. You can then start querying your database.
5. Tip: Explore how you can extend the ORM with scalable connection pooling, global caching, and a managed serverless Postgres database. Read: https://pris.ly/cli/beyond-orm

More information in our documentation:
https://pris.ly/d/getting-started
    "
`;

exports[`works with provider param - mysql 2`] = `
"// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "mysql"
}
"
`;

exports[`works with provider param - mysql 4`] = `
"import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});
"
`;

exports[`works with provider param - postgresql 1`] = `
"
✔ Your Prisma schema was created at prisma/schema.prisma
✔ Your Prisma config was created at prisma.config.ts
  You can now open them in your favorite editor.

Environment variables declared in the \`.env\` file are NOT automatically loaded by Prisma.
See: https://pris.ly/prisma-config-env-vars.

Next steps:
1. Install \`dotenv\`, and add \`import "dotenv/config";\` to your \`prisma.config.ts\` file to load environment variables from \`.env\`.
2. Run prisma dev to start a local Prisma Postgres server.
3. Define models in the schema.prisma file.
4. Run prisma migrate dev to migrate your local Prisma Postgres database.
5. Tip: Explore how you can extend the ORM with scalable connection pooling, global caching, and a managed serverless Postgres database. Read: https://pris.ly/cli/beyond-orm

More information in our documentation:
https://pris.ly/d/getting-started
    "
`;

exports[`works with provider param - postgresql 2`] = `
"// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
}
"
`;

exports[`works with url param 1`] = `
"
✔ Your Prisma schema was created at prisma/schema.prisma
✔ Your Prisma config was created at prisma.config.ts
  You can now open them in your favorite editor.

Environment variables declared in the \`.env\` file are NOT automatically loaded by Prisma.
See: https://pris.ly/prisma-config-env-vars.

Next steps:
1. Install \`dotenv\`, and add \`import "dotenv/config";\` to your \`prisma.config.ts\` file to load environment variables from \`.env\`.
2. Run prisma db pull to turn your database schema into a Prisma schema.
3. Run prisma generate to generate the Prisma Client. You can then start querying your database.
4. Tip: Explore how you can extend the ORM with scalable connection pooling, global caching, and a managed serverless Postgres database. Read: https://pris.ly/cli/beyond-orm

More information in our documentation:
https://pris.ly/d/getting-started
    "
`;

exports[`works with url param 2`] = `
"// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "sqlite"
}
"
`;

exports[`writes a minimal .gitignore file 1`] = `
"node_modules
# Keep environment variables out of version control
.env

/generated/prisma
"
`;

exports[`writes a minimal .gitignore file 2`] = `
"import { defineConfig, env } from "prisma/config";

export default defineConfig({
  schema: "prisma/schema.prisma",
  migrations: {
    path: "prisma/migrations",
  },
  datasource: {
    url: env("DATABASE_URL"),
  },
});
"
`;
